# argon2min

./: .gitmodules  .travis.yml  Cargo.toml  README.md  travis.sh
benches/: constant_eq.rs  versus_cargon.rs
benches/cargon/: Cargo.toml  build.rs
examples/: cli.rs  helloworld.rs  verifier.rs
src/: argon2.rs  block.rs  lib.rs  octword.rs  verifier.rs  workers.rs
