[package]
name = "argon2min"
version = "0.3.0"
authors = ["Chris West <git@goeswhere.com>", "bryant <bryant@defrag.in>"]
repository = "https://github.com/FauxFaux/argon2min"
description = "The pure Rust password hashing library that runs on Argon2."
readme = "README.md"
keywords = ["crypto", "argon2", "argon2i", "argon2d", "argon2id", "hash"]
license = "MIT"

[features]
bench_ref = ["cargon"]

[dependencies]
blake2-rfc = "0.2.18"

[dependencies.cargon]
path = "benches/cargon"
optional = true

[profile.bench]
lto = true
